refactor(jikkou): add new KafkaResourceManager interface